# FTG

./: build.sh  requirements.txt  setup.py
config/: config.example.yaml
cpp/: CMakeLists.txt  edge_processor.cpp
src/: __init__.py
src/common/: __init__.py  config.py  cpp_wrapper.py  logger.py  models.py  utils.py
src/coordinator/: __init__.py  alert_manager.py  api.py  core.py  dashboard.py  data_processor.py  main.py  resource_manager.py
src/edge_node/: __init__.py  ai_processors.py  base.py  communication.py  main.py  sensors.py  storage.py
web/dashboard/: package.json  server.js
web/dashboard/public/: dashboard.js  index.html
